# UESF

./: .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  pyproject.toml
docs/cli_design/: database_design.sql  design.md
docs/design/: 00_index.md  01_overall_design.md  02_core_principles.md  02_design_details.md  02_design_details.md.bak  06_cli_reference.md  07_tech_stack.md  08_exception_and_logging.md  09_testing_and_qa.md
docs/homework/: hw01_requirements_analysis.md  hw02_overall_design.md
docs/implementation_log/: sprint_00.md  sprint_01.md  sprint_02.md  sprint_03.md  sprint_04.md  sprint_05.md  sprint_06.md
docs/legacy/: cli_design.yml  database_design.sql  design.md
docs/user/: index.md
src/uesf/: __init__.py  __main__.py
tests/: conftest.py
tests/cli/: test_config_cmd.py  test_data_cmd.py  test_experiment_cmd.py  test_metric_cmd.py  test_model_cmd.py  test_project_cmd.py  test_trainer_cmd.py
tests/components/: test_base_model.py  test_base_trainer.py  test_builtin_mappings.py  test_builtin_metrics.py
tests/core/: test_config.py  test_data_manager_raw.py  test_database.py  test_exceptions.py  test_logging.py  test_uesf_home.py
tests/e2e/: test_full_workflow.py
tests/experiment/: test_dataloader_builder.py  test_dataset.py  test_evaluator.py  test_runner.py  test_splitter.py  test_transforms.py
tests/fixtures/: fake_data.py
tests/managers/: test_metric_manager.py  test_model_manager.py  test_project_manager.py  test_trainer_manager.py
tests/pipeline/: test_data_ops.py  test_joint_ops.py  test_label_ops.py  (+1 more)
(+76 files in other folders)
